Make Bukkit module closer to "barely working"